Bug 900200 - Fix strange transparent areas appearing in some APNG files. r=seth